--- a/vignettes/ucb.Rmd
+++ b/vignettes/ucb.Rmd
@@ -10,11 +10,11 @@ vignette: >
 bibliography: lib.bib
 ---
 
-The introductory vignette showed how to manage bandit objects with the `banditr` package. This vignette details the specifics of how `banditr` manages Linear Upper Confidence Bounds (LinUCB, ) bandit algorithms. 
+The introductory vignette gives a short introduction to bandit algorithms, and their implementation in the `banditr` package. This vignette details the specifics of how `banditr` handles Linear Upper Confidence Bounds (LinUCB, [@Li2010a]) bandit algorithms. 
 
-## Vignette Info
+Let $\hat{y}_{it}$ be the predicted outcome for treatment arm $i$. At each time period $t$, the LinUCB algorithm selects the experimental arm $i$ that maximizes $p(i,t) = \hat{y}_i^T \beta_t + \alpha U_t(i)$, where $U_t(i) = \sqrt{z_i^T\left(X_t^T X_t + \lambda I_K \right)^{-1} z_i}$. The parameter $\alpha \geq 0$ is a tuning parameter that arbitrates between exploitation (selecting treatment arms with a high predicted reward $\hat{y}_i$), and exploration (selecting treatment arms with high uncertainty $U_t(i)$). The parameter $\lambda > 0$ introduces ridge regularization. 
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+For modelling, the package currently supports linear, and logistic regressions with ridge regularization, and allows for a first stage of variable selection using the LASSO, as well as the automatic selection of tuning parameters using $K-fold$ cross-validation. All these functionalities are implemented using the `glmnet` package, wrapped into the new `banditGlmnet` class, that supports the formula interface. 
 
 ## Styles
 
