--- a/vignettes/lib.bib
+++ b/vignettes/lib.bib
@@ -1,18 +1,9 @@
-@article{Scott2010,
-author = {Scott, Steven L.},
-doi = {10.1002/asmb},
-file = {:C$\backslash$:/Users/Romain/Dropbox/Mendeley/Scott/Applied Stochastic Models in Business and Industry/Scott - 2010 - A modern Bayesian look at the multi-armed bandit.pdf:pdf},
-journal = {Applied Stochastic Models in Business and Industry},
-keywords = {bayesian adaptive,exploration vs exploitation,probability matching,sequential design},
-pages = {639--658},
-title = {{A modern Bayesian look at the multi-armed bandit}},
-volume = {26},
-year = {2010}
-}
-@article{Imai,
-author = {Imai, Kosuke and Egami, Naoki},
-file = {:C$\backslash$:/Users/Romain/Dropbox/Mendeley/Imai, Egami/Unknown/Imai, Egami - Unknown - The Benefits of Variable Selection in High-Dimensional Linear Bandits.pdf:pdf},
-title = {{The Benefits of Variable Selection in High-Dimensional Linear Bandits}}
+@article{Egami2017,
+author = {Egami, Naoki and Imai, Kosuke},
+file = {:C$\backslash$:/Users/Romain/Dropbox/Mendeley/Egami, Imai/Working paper/Imai, Egami - Unknown - The Benefits of Variable Selection in High-Dimensional Linear Bandits.pdf:pdf},
+journal = {Working paper},
+title = {{The Benefits of Variable Selection in High-Dimensional Linear Bandits}},
+year = {2017}
 }
 @inproceedings{Li2010a,
 address = {Railegh, NC},
@@ -25,5 +16,16 @@ keywords = {contextual bandit,exploitation dilemma,exploration,personalization,r
 pages = {661--670},
 publisher = {ACM},
 title = {{A Contextual-Bandit Approach to Personalized News Article Recommendation}},
+year = {2010}
+}
+@article{Scott2010,
+author = {Scott, Steven L.},
+doi = {10.1002/asmb},
+file = {:C$\backslash$:/Users/Romain/Dropbox/Mendeley/Scott/Applied Stochastic Models in Business and Industry/Scott - 2010 - A modern Bayesian look at the multi-armed bandit.pdf:pdf},
+journal = {Applied Stochastic Models in Business and Industry},
+keywords = {bayesian adaptive,exploration vs exploitation,probability matching,sequential design},
+pages = {639--658},
+title = {{A modern Bayesian look at the multi-armed bandit}},
+volume = {26},
 year = {2010}
 }
